<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diamonds&amp;Hearts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="instruction">Instruction</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="turn_counter">Turn counter</string>
    <string name="quick_game">Quick Game</string>
    <string name="new_game">New Game</string>
    <string name="check_games">Check Games</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome,&#160;</string>
    <string name="diamond_label">&#9830;: </string>
    <string name="heart_label">&#9829;: </string>
    <string name="hand_label">H: </string>
    <string name="diamond">&#9830;</string>
    <string name="heart">&#9829;</string>
    <string name="spade">&#9824;</string>
    <string name="club">&#9827;</string>
    <string name="test_game">Test Game</string>
    <string name="draw">Draw</string>
    <string name="skip">Skip</string>
    <string name="appicon">AppIcon</string>
    <string name="rankings">Rankings</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="instruction_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor dui eu pellentesque semper. Duis egestas non ligula at maximus. Fusce in arcu tempus, venenatis libero nec, tincidunt nulla. Suspendisse at urna at metus pharetra pretium nec scelerisque felis. Nam massa lectus, auctor sed metus ut, varius congue velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.Vivamus accumsan mattis lacus, in ultrices ligula. Praesent sagittis neque eget mollis feugiat. Sed posuere, leo ac egestas efficitur, nisi arcu vestibulum purus, in porta nisl diam nec nulla. Fusce tempus mollis tincidunt. Nullam tristique, dui et egestas fermentum, nunc purus sollicitudin purus, a consequat neque justo quis mi. Fusce vulputate imperdiet tellus eget molestie. Proin porttitor, massa ut venenatis dictum, ipsum elit aliquet ante, vel mollis libero felis et elit. Quisque at pellentesque velit. Praesent at ipsum quis urna dictum congue et eu leo. Integer ultricies lorem a ullamcorper tincidunt. Curabitur convallis dictum condimentum. Etiam sit amet lacus tortor. Vestibulum lectus tellus, viverra eget eros ac, vestibulum lacinia eros. Curabitur mollis nulla ac urna ornare, eu maximus felis aliquet. In finibus fermentum nulla tempus eleifend. Aliquam porta nec nulla quis hendrerit. Pellentesque non elit eu enim viverra semper quis sit amet orci. Quisque eu nunc eget leo gravida eleifend sit amet ut sem. Vestibulum eu magna nisl. Fusce facilisis tortor magna, nec tempor turpis euismod vitae. Maecenas eget tortor vitae erat luctus porttitor in sed orci. Aliquam id tincidunt risus. Nullam vitae sapien eu quam ultrices pulvinar. Nunc neque mi, lobortis quis enim consequat, posuere aliquam tellus. Quisque id quam augue. In ullamcorper congue lorem, id tincidunt metus porta sed. Suspendisse et nisi venenatis, suscipit turpis et, rhoncus sem. In hac habitasse platea dictumst. Fusce dolor sem, dapibus quis tortor in, egestas lacinia urna. Donec sodales orci libero, at egestas arcu rhoncus at. Nullam ac turpis euismod, tempus magna ut, dignissim nisl. Phasellus tortor arcu, dictum in dolor nec, fermentum tincidunt purus. Quisque congue mi eget cursus pellentesque. Duis nec iaculis eros, blandit commodo orci. Vestibulum velit est, laoreet quis hendrerit rutrum, gravida eu massa. Vivamus at ultricies sem. Cras vitae feugiat eros, vel egestas lorem. Sed tincidunt augue nisi. Sed ipsum ligula, rutrum vel auctor a, condimentum sed libero.Mauris tincidunt tempus metus ut lobortis. Duis aliquet, enim eu commodo ornare, dui nibh ullamcorper lectus, varius bibendum metus tellus vel quam. Quisque pulvinar velit sit amet maximus pretium. Nunc sed bibendum ligula. Ut id bibendum orci. Suspendisse sit amet sem maximus, iaculis tellus in, efficitur nunc. Aenean ornare condimentum nisi, ac feugiat velit efficitur ut. Sed quis ante tellus. Curabitur a nunc in tortor tristique suscipit.</string>

</resources>