<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diamondshearts.GamePlayFragment" > 
    
        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/match_instructions"
            android:textAppearance="@style/HelpText"
            android:width="300dp" />

        <TextView
            android:id="@+id/turn_counter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/turn_counter"
            android:textAppearance="@style/GuessWordText"
            android:width="300dp" />

        <EditText
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:inputType="textEmailAddress|textEmailSubject"
            android:maxLines="1"
            android:text="@string/hello_world"
            android:textAppearance="@style/GuessWordText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/doneButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onDoneClicked"
                android:text="@string/done"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/cancel"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/leaveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onLeaveClicked"
                android:text="@string/leave"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
</LinearLayout>
