<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diamondshearts.MainMenuFragment" >
    
    <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".MainActivity"
            tools:ignore="UselessParent" >
            
             <TextView
                android:id="@+id/title_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/app_name"
                android:textAppearance="@style/HelpText.Heading" />

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption" />
			
            <Button
                android:id="@+id/quickGameButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onQuickGameClicked"
                android:text="@string/quick_game" />     

            <Button
                android:id="@+id/newGameButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onNewGameClicked"
                android:text="@string/new_game" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />
            
            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_out" />
        </LinearLayout>

</RelativeLayout>