<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:background="@drawable/rounded_border"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/player_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/diamond_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diamond_label" 
            />

        <TextView
            android:id="@+id/diamond_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />
        
        <TextView
            android:id="@+id/heart_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_label"
             />
        
       <TextView
            android:id="@+id/heart_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />
       
      <TextView
            android:id="@+id/hand_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hand_label" />
        
       <TextView
            android:id="@+id/hand_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>
