<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_background" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/IconImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/appicon"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/instruction"
            android:textAppearance="@style/MainText" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".MainActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".MainActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:textAppearance="@style/HelpText.Caption" />

            <Button
                android:id="@+id/instructionButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:onClick="onInstuctionClicked"
                android:text="@string/instruction" />

            <Button
                android:id="@+id/newGameButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:onClick="onNewGameClicked"
                android:text="@string/new_game" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_out" />
        </LinearLayout>

        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/secret_layout"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/menu_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>